--- a/index.html
+++ b/index.html
@@ -83,28 +83,36 @@
     <div class="footer">
         <div class="footerGridContainer">
             <div class="footergrid p-3">
-                <h5 class="fw-bold">About Us</h5><br>
-                <p>Welcome to Geeky Works! We are a new and innovative website maker company that was established in June 2023. Our primary goal is to transform your theoretical ideas into visually captivating websites, all at an affordable price.</p>
+                <h5 class="fw-bold text-white">About Us</h5><br>
+                <p class="text-white">Welcome to Geeky Works! We are a new and innovative website maker company that was established in June 2023. Our primary goal is to transform your theoretical ideas into visually captivating websites, all at an affordable price.</p>
                 
-                <h5 class="fw-bold"><img src="Assets/Images/footerLogo.png" alt="" class="footerlogo">
-                GeekyWorks</h5>
+                <h6 class="fw-bold text-white"><img src="Assets/Images/footerLogo.png" alt="" class="footerlogo">
+                GeekyWorks</h6>
             </div>
             <div class="footergrid p-3">
-                <h5 class="fw-bold">Quick Links</h5><br>
-                <ul>
-                    <li><a href="#" class="quicklinks">Themes</a></li>
-                    <li><a href="#" class="quicklinks">Portfolio</a></li>
-                    <li><a href="#" class="quicklinks">Price</a></li>
-                </ul>
+                <h5 class="fw-bold text-white">Price</h5><br>
+                    <a href="#" class="quicklinks">Basic</a><br>
+                    <a href="#" class="quicklinks">Standard</a><br>
+                    <a href="#" class="quicklinks">Premium</a><br>
+                    <a href="#" class="quicklinks">Maintenance</a>
             </div>
             <div class="footergrid p-3">
-                <h5 class="fw-bold">Contact Us</h5><br>
+                <h5 class="fw-bold text-white">Quick Links</h5><br>
+                    <a href="#" class="quicklinks">Themes</a><br>
+                    <a href="#" class="quicklinks">Portfolio</a><br>
+                    <a href="#" class="quicklinks">Color Schemes</a>
+            </div>
+            <div class="footergrid p-3">
+                <h5 class="fw-bold text-white">Contact Us</h5><br>
                 <form action="#">
                     <input type="text" class="form-control" placeholder="Enter Email"><br>
                     <button class="contactUsBtn">Enter</button>
                 </form>
             </div>
-            <div class="footergrid p-3"></div>
+            <div class="footergrid text-center text-white">
+                <hr style="width: 100%;">
+                <p class="text-white">&#169; Copyright 2023 - All Rights Reserve</p>
+            </div>
         </div>
     </div>
     <!-- end of footer -->
