--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                               </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-links pe-lg-3" href="#">About</a></li>
+                        <li class="nav-item"><a class="nav-links pe-lg-3" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-links pe-lg-3" href="#">Contact</a></li>
                         <li class="nav-item"><a class="nav-links" href="#">Reviews</a></li>
                     </ul>
@@ -90,7 +90,7 @@
             <div class="footergrid p-3">
                 <h5 class="fw-bold text-white">About</h5><br>
                 <p class="text-white">Welcome to Geeky Works! We are a new and innovative website maker company that was established in June 2023. Our primary goal is to transform your theoretical ideas into visually captivating websites, all at an affordable price.</p>
-                
+                <p><a class="about_more" href="about.html">See more...</a></p> <br>                
                 <h6 class="fw-bold text-white"><img src="Assets/Images/footerLogo.png" alt="" class="footerlogo">
                 GeekyWorks</h6>
             </div>
